--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scorecard Builder</title>
+    <meta name="description" content="Open source baseball scorecard builder with visual editor, live preview, and printable output" />
+    <title>Open Scorecard — Baseball Scorecard Builder</title>
   </head>
   <body>
     <div id="root"></div>
